add download monitor

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a id="menu_button_close" style="cursor: auto;position: absolute;left: 0" href="#"><h3>X</h3></a>
         <div id="menu_container" class="">
             <a href="search.html" >
-                <h5>link 1</h5>
+                <h5>Add video</h5>
             </a>
             <a href="#" >
                 <h5>link 2</h5>
@@ -91,12 +91,16 @@
                         <div id="uncomplete" class="progress_bar" style="background-color: red;">
 
                         </div>
+                        <div id="downloading" style="display: block">
+
+                        </div>
                     </div>
 
                 </div>
 
             </div>
         </div>
+
     </div>
 
 
